--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,13 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-    },
-    "replace": {
-        "fuel/money": "self.version"
+        "php": ">=5.6.4"
     },
     "require-dev": {
     },
     "autoload": {
         "psr-4": {
             "Rocket\\Fuel\\": "src/Fuel/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
         }
     },
     "suggest": {
