--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "rocketshop/engine",
     "description": "The Rocket Engine.",
-    "keywords": ["e-commerce", "rocket"],
+    "keywords": [""],
     "license": "MIT",
     "homepage": "",
     "authors": [
@@ -11,20 +11,17 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4"
-    },
-    "require-dev": {
+        "php": ">=7.0"
     },
     "autoload": {
         "psr-4": {
             "Rocket\\Fuel\\": "src/Fuel/"
         }
     },
-    "suggest": {
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "dev"
 }
