--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "autoload": {
         "psr-4": {
             "Rocket\\Fuel\\": "src/Fuel/",
-            "Rocket\\Fuel\\": "src/Cockpit/",
+            "Rocket\\Fuel\\": "src/Cockpit/src/",
             "Rocket\\Engine\\": "src/"
         }
     },
