--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "autoload": {
         "psr-4": {
             "Rocket\\Cockpit\\": "packages/Cockpit/src/",
-            "Rocket\\Ecommerce\\": "packages/Ecommerce/src/",
+            "Rocket\\Store\\": "packages/Store/src/",
             "Rocket\\Stories\\": "packages/Stories/src/",
             "Rocket\\User\\": "packages/User/src/",
             "Rocket\\Engine\\": "src/"
